{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 18,
  "lineage": "f4af8995-2f67-e70a-6e3e-23fd29284fdf",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_gitlab_http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-06T09:59:15.573-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-gitlab-http",
            "name": "allow-gitlab-http",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-2628190/global/networks/default",
            "priority": 1000,
            "project": "infra-2628190",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-2628190/global/firewalls/allow-gitlab-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gitlab"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_gitlab_https",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-06T09:59:15.582-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-gitlab-https",
            "name": "allow-gitlab-https",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-2628190/global/networks/default",
            "priority": 1000,
            "project": "infra-2628190",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-2628190/global/firewalls/allow-gitlab-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gitlab"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-06T09:59:15.706-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "default-allow-ssh",
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-2628190/global/networks/default",
            "priority": 1000,
            "project": "infra-2628190",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-2628190/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gitlab-ci",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20200317",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-2628190/zones/europe-west1-b/disks/gitlab-ci"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "gitlab-ci",
            "instance_id": "2970397116320899338",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDYoLys47YngcRS/rV8syGnizj68SgU9BDaI+4NoB4zfh3BcGKj1PZNn9EtV/pbuo6BR7TZEydeGNYKISD3Lbf1IKc+8LHJpabgUUgp5ppbzvfS0aUlkoz3P+S/DppH0hY3QcAAMcVRVnJFsJ56Eb9OoCm7/vDUaT6wSBGVm6XQUhvozqI8vHIsuZleti9Lx4kYse35zRcfPinPIy63qij+YsZe1qY5GDS6rjne+BohUGKY+Gi74NT3EkmjCSnOJbO3d2Fpq0i/+Y53C3rpJOfGckCMHLdt4cFhakUQ13NyFzhg85ToCL+r3ykNEmc9wewQkkffkOL00hxv58fghzcB appuser\n"
            },
            "metadata_fingerprint": "8reLJEhp7is=",
            "name": "gitlab-ci",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.233.83.79",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-2628190/global/networks/default",
                "network_ip": "10.132.15.231",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-2628190/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "infra-2628190"
              }
            ],
            "project": "infra-2628190",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-2628190/zones/europe-west1-b/instances/gitlab-ci",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "gitlab"
            ],
            "tags_fingerprint": "TK78cUpPpuI=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}